--- a/src/OpenHdWebUi/Client/Shared/NavMenu.razor
+++ b/src/OpenHdWebUi/Client/Shared/NavMenu.razor
@@ -15,6 +15,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="files">
+                <span class="oi oi-plus" aria-hidden="true"></span> Files
+            </NavLink>
+        </div>
+        @*<div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
@@ -23,7 +28,7 @@
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
-        </div>
+        </div>*@
     </nav>
 </div>
 
