--- a/src/OpenHdWebUi/Client/Shared/NavMenu.razor
+++ b/src/OpenHdWebUi/Client/Shared/NavMenu.razor
@@ -19,12 +19,12 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Files
             </NavLink>
         </div>
-        @*<div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="system-actions">
+                <span class="oi oi-plus" aria-hidden="true"></span> Actions
             </NavLink>
         </div>
-        <div class="nav-item px-3">
+        @*<div class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
