--- a/src/OpenHdWebUi.Server/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/OpenHdWebUi.Server/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -28,6 +28,11 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/files']"
+            >Files</a
+            >
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/counter']"
               >Counter</a
             >
