--- a/src/OpenHdWebUi.Server/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/OpenHdWebUi.Server/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,10 @@
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">OpenHdWebUi.Server</a>
+      <a class="navbar-brand" [routerLink]="['/']">
+        <img src="assets/logo.jpg" height="40" class="d-inline-block align-top" alt="">
+        OpenHD WebUI
+      </a>
       <button
         class="navbar-toggler"
         type="button"
@@ -20,27 +23,8 @@
         [ngClass]="{ show: isExpanded }"
       >
         <ul class="navbar-nav flex-grow">
-          <li
-            class="nav-item"
-            [routerLinkActive]="['link-active']"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
-          </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/files']"
-            >Files</a
-            >
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']"
-              >Counter</a
-            >
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-              >Fetch data</a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/files']">Files</a>
           </li>
         </ul>
       </div>
