--- a/src/OpenHdWebUi.Server/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/OpenHdWebUi.Server/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -18,15 +18,18 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div
-        class="navbar-collapse collapse d-sm-inline-flex justify-content-end"
-        [ngClass]="{ show: isExpanded }"
-      >
-        <ul class="navbar-nav flex-grow">
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/files']">Files</a>
-          </li>
-        </ul>
+      <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end"
+           [ngClass]="{ show: isExpanded }">
+          <ul class="navbar-nav flex-grow">
+              <li class="nav-item" [routerLinkActive]="['link-active']">
+                  <a class="nav-link text-dark" [routerLink]="['/files']">Files</a>
+              </li>
+          </ul>
+          <ul class="navbar-nav flex-grow">
+              <li class="nav-item" [routerLinkActive]="['link-active']">
+                  <a class="nav-link text-dark" [routerLink]="['/system']">System</a>
+              </li>
+          </ul>
       </div>
     </div>
   </nav>
