--- a/src/OpenHdWebUi.Server/ClientApp/src/app/system/system.component.html
+++ b/src/OpenHdWebUi.Server/ClientApp/src/app/system/system.component.html
@@ -12,10 +12,6 @@
                     <button type="button" (click)="onCommandClick(command)" class="w-100 btn btn-lg btn-outline-primary">{{command.displayName}}</button>
                 </li>
               </ul>
-
-            <!--<h1 class="card-title pricing-card-title">$0<small class="text-muted fw-light">/mo</small></h1>-->
-
-
           </div>
         </div>
     </div>
@@ -24,15 +20,13 @@
             <div class="card-header py-3">
                 <h4 class="my-0 fw-normal">System files</h4>
             </div>
-            <div class="card-body">
-                <!--<h1 class="card-title pricing-card-title">$15<small class="text-muted fw-light">/mo</small></h1>
-                <ul class="list-unstyled mt-3 mb-4">
-                    <li>20 users included</li>
-                    <li>10 GB of storage</li>
-                    <li>Priority email support</li>
-                    <li>Help center access</li>
-                </ul>-->
-            </div>
+          <div class="card-body">
+            <ul class="list-unstyled mt-3 mb-4" *ngFor="let file of files">
+              <li>
+                  <a role="button" class="w-100 btn btn-lg btn-outline-primary" href="api/system/get-file/{{ file.id }}">{{file.displayName}}</a>
+              </li>
+            </ul>
+          </div>
         </div>
     </div>
 </div>
