--- a/src/OpenHdWebUi.Server/ClientApp/src/app/files/files.component.html
+++ b/src/OpenHdWebUi.Server/ClientApp/src/app/files/files.component.html
@@ -14,7 +14,12 @@
   <tr *ngFor="let file of files">
     <td><img src="{{ file.previewPath }}" class="object-fit-contain border rounded" height="120" /></td>
     <td>{{ file.fileName }}</td>
-    <td><a href="{{ file.downloadPath }}" download>Download</a></td>
+    <td>
+        <div class="btn-group">
+            <a href="{{ file.downloadPath }}" class="btn btn-primary" download>Download</a>
+            <a href="{{ file.fileName}}" class="btn btn-danger">Delete</a>
+        </div>
+    <td>
   </tr>
   </tbody>
 </table>
