--- a/src/OpenHdWebUi.Server/ClientApp/src/app/files/files.component.html
+++ b/src/OpenHdWebUi.Server/ClientApp/src/app/files/files.component.html
@@ -17,7 +17,7 @@
     <td>
         <div class="btn-group">
             <a href="{{ file.downloadPath }}" class="btn btn-primary" download>Download</a>
-            <a href="{{ file.fileName}}" class="btn btn-danger">Delete</a>
+            <a class="btn btn-danger" (click)="onDeleteClick(file.fileName)">Delete</a>
         </div>
     <td>
   </tr>
