--- a/src/OpenHdWebUi.Server/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/OpenHdWebUi.Server/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -20,11 +20,16 @@
       </button>
       <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end"
            [ngClass]="{ show: isExpanded }">
-          <ul class="navbar-nav flex-grow">
-              <li class="nav-item" [routerLinkActive]="['link-active']">
-                  <a class="nav-link text-dark" [routerLink]="['/files']">Files</a>
-              </li>
-          </ul>
+        <ul class="navbar-nav flex-grow">
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/files']">Files</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav flex-grow">
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/fpv']">FPV</a>
+          </li>
+        </ul>
           <ul class="navbar-nav flex-grow">
               <li class="nav-item" [routerLinkActive]="['link-active']">
                   <a class="nav-link text-dark" [routerLink]="['/system']">System</a>
