--- a/src/OpenHdWebUi.Server/ClientApp/src/app/fpv/fpv.component.html
+++ b/src/OpenHdWebUi.Server/ClientApp/src/app/fpv/fpv.component.html
@@ -1,4 +1,4 @@
 <p>{{demoText}}</p>
 <div>
-    <video id="vpfVideo" height="480" width="640"></video>
+    <video #fpvVideo height="480" width="640"></video>
 </div>
