--- a/src/OpenHdWebUi.Server/ClientApp/src/app/fpv/fpv.component.html
+++ b/src/OpenHdWebUi.Server/ClientApp/src/app/fpv/fpv.component.html
@@ -1,3 +1,9 @@
+<div class="alert alert-danger d-flex align-items-center" role="alert">
+    <p class="fs-3">
+        This is early preview feature. Streaming to web browser is unreliable by design. Do not use it to control drone in air.
+    </p>
+</div>
+
 <div>
-    <video #fpvVideo height="480" width="640" controls autoplay="autoplay"></video>
+    <video #fpvVideo height="480" width="640" controls autoplay="autoplay" class="object-fit-none"></video>
 </div>
