--- a/src/OpenHdWebUi.Server/ClientApp/src/app/fpv/fpv.component.html
+++ b/src/OpenHdWebUi.Server/ClientApp/src/app/fpv/fpv.component.html
@@ -1,9 +1,15 @@
-<div class="alert alert-danger d-flex align-items-center" role="alert">
-    <p class="fs-3">
-        This is early preview feature. Streaming to web browser is unreliable by design. Do not use it to control drone in air.
-    </p>
-</div>
-
-<div>
-    <video #fpvVideo height="480" width="640" controls autoplay="autoplay" class="object-fit-none"></video>
+<div class="container text-center">
+    <div class="row justify-content-md-center">
+        <div class="col-md-auto">
+            <video #fpvVideo height="480" width="640" autoplay muted controls playsinline></video>
+        </div>
+    </div>
+    <div class="row justify-content-md-center">
+        <div class="col-md-auto">
+            <button type="button" class="btn btn-primary" (click)="onStartVideoClick()">Start</button>
+        </div>
+        <div class="col-md-auto">
+            <button type="button" class="btn btn-danger" (click)="onStopAll()">Stop all clients</button>
+        </div>
+    </div>
 </div>
