--- a/src/openhdwebui.client/src/app/nav-menu/nav-menu.component.html
+++ b/src/openhdwebui.client/src/app/nav-menu/nav-menu.component.html
@@ -29,14 +29,9 @@
       </button>
       <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end"
            [ngClass]="{ show: isExpanded }">
-        <ul class="navbar-nav flex-grow" *ngIf="isGround">
+        <ul class="navbar-nav flex-grow" *ngIf="isAir">
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/files']">Files</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav flex-grow" *ngIf="isGround">
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fpv']">FPV</a>
           </li>
         </ul>
         <ul class="navbar-nav flex-grow">
