--- a/src/openhdwebui.client/src/app/nav-menu/nav-menu.component.html
+++ b/src/openhdwebui.client/src/app/nav-menu/nav-menu.component.html
@@ -39,6 +39,11 @@
             <a class="nav-link text-dark" [routerLink]="['/system']">System</a>
           </li>
         </ul>
+        <ul class="navbar-nav flex-grow">
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/update']">Update</a>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
