--- a/src/openhdwebui.client/src/app/update/update.component.html
+++ b/src/openhdwebui.client/src/app/update/update.component.html
@@ -37,7 +37,7 @@
             </div>
         </div>
     </div>
-    <div class="row m-3" *ngIf="isUploaded">
+    <div class="row m-3" *ngIf="isUploadInprogress">
         <div class="col-auto align-self-start">
             Wait for buttons activation
         </div>
