test: restore app component spec

--- a/src/openhdwebui.client/src/app/files/files.component.html
+++ b/src/openhdwebui.client/src/app/files/files.component.html
@@ -38,6 +38,9 @@
       animation: loadingDot 1s infinite alternate;
       animation-delay: 0.4s;"></span>
   </div>
+  <div style="margin-top: 1rem; font-size: 1rem; color: #666; text-align: center;">
+    If this message remains, it might simply mean there are no videos available yet.
+  </div>
 </div>
 
 <!-- File Display Section -->
