--- a/src/openhdwebui.client/src/app/frontpage/frontpage.component.html
+++ b/src/openhdwebui.client/src/app/frontpage/frontpage.component.html
@@ -1,5 +1,6 @@
 <section class="hero text-center">
-  <img src="assets/logo.jpg" alt="OpenHD logo" class="logo mb-3">
+  <img src="assets/logo-light.svg" alt="OpenHD logo" class="logo logo-light mb-3">
+  <img src="assets/logo-dark.svg" alt="OpenHD logo" class="logo logo-dark mb-3">
   <h1>OpenHD</h1>
   <p class="tagline">Open Source HD FPV System</p>
   <a class="btn btn-primary mt-3" href="https://openhdfpv.org" target="_blank" rel="noopener">Learn more</a>
