--- a/src/openhdwebui.client/src/app/nav-menu/nav-menu.component.html
+++ b/src/openhdwebui.client/src/app/nav-menu/nav-menu.component.html
@@ -1,11 +1,12 @@
 <header>
-  <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+  <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
     <div class="container">
         <div class="row navbar-brand" >
             <div class="col">
               <div class="row">
                 <a [routerLink]="['/']">
-                  <img src="assets/logo.jpg" height="40" class="d-inline-block align-top" alt="">
+                  <img src="assets/logo-light.svg" height="40" class="d-inline-block align-top logo-light" alt="OpenHD logo">
+                  <img src="assets/logo-dark.svg" height="40" class="d-inline-block align-top logo-dark" alt="OpenHD logo">
                 </a>
               </div>
             </div>
@@ -26,27 +27,27 @@
            [ngClass]="{ show: isExpanded }">
         <ul class="navbar-nav flex-grow">
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
+            <a class="nav-link" [routerLink]="['/']">Home</a>
           </li>
         </ul>
         <ul class="navbar-nav flex-grow" *ngIf="isAir">
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/files']">Videos</a>
+            <a class="nav-link" [routerLink]="['/files']">Videos</a>
           </li>
         </ul>
         <ul class="navbar-nav flex-grow">
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/settings']">Settings</a>
+            <a class="nav-link" [routerLink]="['/settings']">Settings</a>
           </li>
         </ul>
         <ul class="navbar-nav flex-grow">
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/system']">Debug</a>
+            <a class="nav-link" [routerLink]="['/system']">Debug</a>
           </li>
         </ul>
         <ul class="navbar-nav flex-grow">
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/update']">Update</a>
+            <a class="nav-link" [routerLink]="['/update']">Update</a>
           </li>
         </ul>
       </div>
