--- a/src/openhdwebui.client/src/app/nav-menu/nav-menu.component.html
+++ b/src/openhdwebui.client/src/app/nav-menu/nav-menu.component.html
@@ -5,8 +5,7 @@
             <div class="col">
               <div class="row">
                 <a [routerLink]="['/']">
-                  <img src="assets/logo-light.svg" height="40" class="d-inline-block align-top logo-light" alt="OpenHD logo">
-                  <img src="assets/logo-dark.svg" height="40" class="d-inline-block align-top logo-dark" alt="OpenHD logo">
+                  <img src="assets/OpenHD-Logo.png" height="40" class="d-inline-block align-top logo-dark" alt="OpenHD logo">
                 </a>
               </div>
             </div>
