--- a/src/openhdwebui.client/src/app/nav-menu/nav-menu.component.css
+++ b/src/openhdwebui.client/src/app/nav-menu/nav-menu.component.css
@@ -1,8 +1,8 @@
-a.navbar-brand {
+.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
-  color:#fff;
+  color: var(--primary-color);
 }
 
 html {
