--- a/src/openhdwebui.client/src/styles.css
+++ b/src/openhdwebui.client/src/styles.css
@@ -45,6 +45,7 @@ code {
 .dark-theme {
   --background-color: #1c262f;
   --text-color: #f8f9fa;
+  --primary-color: #ffffff;
   --hero-bg: linear-gradient(135deg, #000000 0%, #000000 100%);
 }
 
@@ -58,5 +59,11 @@ code {
 
 .dark-theme .logo-dark {
   display: inline;
+}
+
+main.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
