Default to dark theme and expand layout width

--- a/src/openhdwebui.client/src/app/app.component.html
+++ b/src/openhdwebui.client/src/app/app.component.html
@@ -1,6 +1,6 @@
 ﻿<body>
     <app-nav-menu></app-nav-menu>
-    <main class="container">
+    <main class="container-fluid">
       <router-outlet></router-outlet>
     </main>
   </body>
