--- a/src/openhdwebui.client/src/app/nav-menu/nav-menu.component.html
+++ b/src/openhdwebui.client/src/app/nav-menu/nav-menu.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
-    <div class="container d-flex align-items-center">
+    <div class="container-fluid d-flex align-items-center">
 
       <div class="navbar-brand d-flex align-items-center me-auto">
         <a [routerLink]="['/']">
