--- a/src/openhdwebui.client/src/app/app.component.html
+++ b/src/openhdwebui.client/src/app/app.component.html
@@ -1,7 +1,4 @@
-﻿<body>
-    <app-nav-menu></app-nav-menu>
-    <main class="container-fluid">
-      <router-outlet></router-outlet>
-    </main>
-  </body>
-  
+﻿<app-nav-menu></app-nav-menu>
+<main class="container-fluid">
+  <router-outlet></router-outlet>
+</main>
