--- a/src/openhdwebui.client/src/app/frontpage/frontpage.component.css
+++ b/src/openhdwebui.client/src/app/frontpage/frontpage.component.css
@@ -28,8 +28,14 @@ html, body { background: var(--bg); color: var(--text); }
 .mt-5 { margin-top: 3rem; }
 .mb-3 { margin-bottom: 1rem; }
 .mb-4 { margin-bottom: 1.5rem; }
-.mb-5 { margin-bottom: 3rem; }
+.mb-5 {
+   margin-bottom: 3rem;
+   color: #fff; 
+  }
 .w-100 { width: 100%; }
+.h3 {
+  color: #fff;
+}
 
 .topbar {
   position: sticky; top: 0; z-index: 5;
